--- a/year9_options.org
+++ b/year9_options.org
@@ -16,6 +16,9 @@
   </div>
 <div id="stickyribbon">
   </div>
+<center>
+<img src='img/des_eng.jpg' width=33%>
+</center>
 #+END_HTML
 * COMMENT Use as a template
 :PROPERTIES:
@@ -89,6 +92,10 @@
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: learn
 :END:
+- Why study Engineering?
+#+BEGIN_HTML
+<iframe width="560" height="315" src="https://www.youtube.com/embed/zoHm5AXeYYQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+#+END_HTML
 - To offer a uniquely challenging and enjoyable programme of study, which develops creativity, a logical mind, resilience and problem-solving abilities through the creation of new and original products in our high-spec Design Engineering labs. 
 -  As far as we know, no other school in the area offers such an advanced and forward-looking Technology curriculum. 
 
@@ -138,8 +145,6 @@ Student projects this year incorporate stepper motor control technology, Servo m
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: activity
 :END:
-
-
 ** Score It - Examination
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: badge
@@ -155,14 +160,10 @@ The exam explores students’ understanding of electronics, materials, modelling
 - Students will investigate, design, make and evaluate a specific project, based on the theory and practical skills they will learn throughout the course.  
 - This will be completed in the classroom during Year 11 and under controlled conditions.  
 - This task will be marked by their teacher and the marks verified by the exam board.
-
-** Say
- It - 
+** Say It - Student comments
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: badge
 :END:
-
-
 “By the end of Year 10, I knew I wanted to be a professional engineer” – Year 11 student
 
 “I really enjoy having the freedom to design and create my own ideas” – Year 10 student
