Added YouTube videos

--- a/year9_options.org
+++ b/year9_options.org
@@ -103,6 +103,18 @@
 #+BEGIN_HTML
 <iframe width="560" height="315" src="https://www.youtube.com/embed/zoHm5AXeYYQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 #+END_HTML
+- Why is Design and Technology important?
+#+BEGIN_HTML
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1GIyOMoFpks" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+#+END_HTML
+- Design and Technology at Triumph motorcycles.
+#+BEGIN_HTML
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3k_8tbuFjGM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+#+END_HTML
+- Design and Technology at JCB
+#+BEGIN_HTML
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0kJUmB084Rc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+#+END_HTML
 - To offer a uniquely challenging and enjoyable programme of study, which develops creativity, a logical mind, resilience and problem-solving abilities through the creation of new and original products in our high-spec Design Engineering labs. 
 -  As far as we know, no other school in the area offers such an advanced and forward-looking Technology curriculum. 
 
